stop clipping long text before it hits the edge of the popup window

--- a/chrome/css/popup.css
+++ b/chrome/css/popup.css
@@ -86,7 +86,6 @@
 #song_info_spot {
   overflow:hidden;
   white-space:nowrap;
-  max-width:14em;
   padding-left: 0.4em;
   position: absolute;
   top: 0px;
